--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -41,7 +41,7 @@
      <!-- レスポンシブ対応用背景 -->
     <section class="sphelper_cat" name="sphelper_cat">
         <nav>
-             <li><img class="helper_cat" src="../img/cat_topsp.png"></li>
+             <li><img class="helper_cat" src="../img/cat_topsp.PNG"></li>
         </nav>
     </section>
 
@@ -49,10 +49,10 @@
      <section class="cTitle" id="sTitle" name="sTitle">
         <nav>
             
-            <li><img class="video_title" id="video_title" src="../img/ucyuu1.png"></li><!-- タイトル背景宇宙 -->
-            <li><img class="img_title" src="../img/TOGES_PORTFOLIO.png"></li><!-- タイトルロゴ -->
+            <li><img class="video_title" id="video_title" src="../img/ucyuu1.PNG"></li><!-- タイトル背景宇宙 -->
+            <li><img class="img_title" src="../img/TOGES_PORTFOLIO.PNG"></li><!-- タイトルロゴ -->
             <div class="img_cat" id="simgCat" name="simgCat"> </div><!-- タイトルネコ -->
-            <li><img class="nami" id="nami" src="../img/nami.png"></li><!-- 波 -->
+            <li><img class="nami" id="nami" src="../img/nami.PNG"></li><!-- 波 -->
         </nav>
         
     </section>
@@ -64,7 +64,7 @@
             <li><h1>PROFILE</h1></li>
             <li class="profBox">
                 <div class="profCat" id="profCat">
-                    <img class="prof_img" id="prof_img0" src="../img/toge.png">
+                    <img class="prof_img" id="prof_img0" src="../img/toge.PNG">
                     <h1 class="wfont">とげ</h1>
                     <h3>家事が1ミリもできない<br class="sp_br">ゲーミングキャット<BR>
                     LINE構築・プログラミング<BR>
@@ -72,15 +72,15 @@
                 </div>
             <li class="cHobyBox">
                 <div class="cHobyCat" id="cHobyCat">
-                    <img class="cHoby_img" id="cHoby_img0" src="../img/cat3d.png">
+                    <img class="cHoby_img" id="cHoby_img0" src="../img/cat3d.PNG">
                     <h3 class="wfont" id="cHoby_img3">Blender産まれの3Dネコ</h3>
                 </div>
                 <div class="cHobyCat">
-                    <img class="cHoby_img marginset" id="cHoby_img1" src="../img/catwr.png">
+                    <img class="cHoby_img marginset" id="cHoby_img1" src="../img/catwr.PNG">
                     <h3 class="wfont" id="cHoby_img4">人生の幸福９割以上ネコにある</h3>
                 </div>
                 <div class="cHobyCat">
-                    <img class="cHoby_img big_cat" id="cHoby_img2" src="../img/catp.png">
+                    <img class="cHoby_img big_cat" id="cHoby_img2" src="../img/catp.PNG">
                     <h3 class="wfont" id="cHoby_img5">1日8時間以上机に向かっている</h3>
                 </div>
             </li>
@@ -93,19 +93,19 @@
             <li class="sSkil0Box">
                 <div class="sSkil0CatB" id="sSkil0CatB">
                     <div class="sSkil0CatB2">
-                    <img class="sSkil0Cir_img" id="sSkil0Cir_img" src="../img/hc.png">
+                    <img class="sSkil0Cir_img" id="sSkil0Cir_img" src="../img/hc.PNG">
                     <h3>html / CSS<BR>基本操作は可能です</h3>
                     </div>
                 </div>
                 <div class="sSkil0CatB" id="sSkil0CatB">
                     <div class="sSkil0CatB2">
-                    <img class="sSkil0Cir_img" id="sSkil0Cir_img" src="../img/js.png">
+                    <img class="sSkil0Cir_img" id="sSkil0Cir_img" src="../img/js.PNG">
                     <h3>JavaScript<BR>🐈</h3>
                     </div>
                 </div>
                 <div class="sSkil0CatB" id="sSkil0CatB">
                     <div class="sSkil0CatB2">
-                    <img class="sSkil0Cir_img" id="sSkil0Cir_img" src="../img/php.png">
+                    <img class="sSkil0Cir_img" id="sSkil0Cir_img" src="../img/php.PNG">
                     <h3>PHP(Laravel)<BR>🐘</h3>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     </p>
                 </div>
                 <div class="SkilCat">
-                        <img class="sSkil_img catsc" src="../img/catsc.png">
+                        <img class="sSkil_img catsc" src="../img/catsc.PNG">
                     </div>
                 </li>
                 <h3 class="item">◆ 小売業　接客版売</h3>
@@ -159,7 +159,7 @@
                         </p>
                     </div>
                     <div class="SkilCat">
-                        <img class="sSkil_img catds" src="../img/catds.png">
+                        <img class="sSkil_img catds" src="../img/catds.PNG">
                     </div>
                 </li>
                 <h3 class="item">◆ 公式LINE構築</h3>
@@ -180,7 +180,7 @@
                           </p>
                     </div>
                     <div class="SkilCat">
-                        <img class="sSkil_img catl" src="../img/catl.png">
+                        <img class="sSkil_img catl" src="../img/catl.PNG">
                     </div>
                 </li>
             </ul>
@@ -194,8 +194,8 @@
             <li class="sActual1">
                 <div class="sActualCat" id="sActualCat">
                     <a href="portfolio.php"></a>
-                    <img class="sActual_img" src="../img/screen.png">
-                    <img class="sActual_img_sp" src="../img/sp_po.png">
+                    <img class="sActual_img" src="../img/screen.PNG">
+                    <img class="sActual_img_sp" src="../img/sp_po.PNG">
                 </div>
                 <div class="ActualMsgBox">
                     <h3>◆ ポートフォリオサイト</h3><BR>
@@ -209,8 +209,8 @@
             <li class="sActual1">
                 <div class="sActualCat" id="sActualCat">
                     <a href="https://lin.ee/JZQdWSi"></a>
-                    <img class="sActual_img" src="../img/line.png">
-                    <img class="sActual_img_sp" src="../img/sp_line.png">
+                    <img class="sActual_img" src="../img/line.PNG">
+                    <img class="sActual_img_sp" src="../img/sp_line.PNG">
                 </div>
                 <div  class="ActualMsgBox">
                     <h3>◆ 公式LINE　デモアカウント</h3><BR>
@@ -223,8 +223,8 @@
             <li class="sActual1">
                 <div class="sActualCat" id="sActualCat">
                     <a href="portfolio.php"></a>
-                    <img class="sActual_img" src="../img/pc_co.png">
-                    <img class="sActual_img_sp" src="../img/sp_co.png">
+                    <img class="sActual_img" src="../img/pc_co.PNG">
+                    <img class="sActual_img_sp" src="../img/sp_co.PNG">
                 </div>
                 <div>
                     <h3>◆ 業務系Webシステム</h3>
@@ -238,7 +238,7 @@
         <li><h1>LAST</h1></li>
         <nav>
                 <div class="slastCat">
-                    <img class="catmaru_img" src="../img/catmaru.png">
+                    <img class="catmaru_img" src="../img/catmaru.PNG">
                 </div>
                 <li class="slast1">◆好奇心が止まらず、疑問をとことん分析・追求する。<BR>
                     ◆考えたり学び続ける事が好き。<BR>
