--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -41,7 +41,7 @@
      <!-- レスポンシブ対応用背景 -->
     <section class="sphelper_cat" name="sphelper_cat">
         <nav>
-             <li><img class="helper_cat" src="../img/cat_topsp.PNG"></li>
+             <li><img class="helper_cat" src="../img/cat_topsp.png"></li>
         </nav>
     </section>
 
@@ -49,7 +49,7 @@
      <section class="cTitle" id="sTitle" name="sTitle">
         <nav>
             
-            <li><img class="video_title" id="video_title" src="../img/ucyuu1.PNG"></li><!-- タイトル背景宇宙 -->
+            <li><img class="video_title" id="video_title" src="../img/ucyuu1.png"></li><!-- タイトル背景宇宙 -->
             <li><img class="img_title" src="../img/TOGES_PORTFOLIO.PNG"></li><!-- タイトルロゴ -->
             <div class="img_cat" id="simgCat" name="simgCat"> </div><!-- タイトルネコ -->
             <li><img class="nami" id="nami" src="../img/nami.PNG"></li><!-- 波 -->
@@ -72,11 +72,11 @@
                 </div>
             <li class="cHobyBox">
                 <div class="cHobyCat" id="cHobyCat">
-                    <img class="cHoby_img" id="cHoby_img0" src="../img/cat3d.PNG">
+                    <img class="cHoby_img" id="cHoby_img0" src="../img/cat3d.png">
                     <h3 class="wfont" id="cHoby_img3">Blender産まれの3Dネコ</h3>
                 </div>
                 <div class="cHobyCat">
-                    <img class="cHoby_img marginset" id="cHoby_img1" src="../img/catwr.PNG">
+                    <img class="cHoby_img marginset" id="cHoby_img1" src="../img/catwr.png">
                     <h3 class="wfont" id="cHoby_img4">人生の幸福９割以上ネコにある</h3>
                 </div>
                 <div class="cHobyCat">
@@ -194,8 +194,8 @@
             <li class="sActual1">
                 <div class="sActualCat" id="sActualCat">
                     <a href="portfolio.php"></a>
-                    <img class="sActual_img" src="../img/screen.PNG">
-                    <img class="sActual_img_sp" src="../img/sp_po.PNG">
+                    <img class="sActual_img" src="../img/screen.png">
+                    <img class="sActual_img_sp" src="../img/sp_po.png">
                 </div>
                 <div class="ActualMsgBox">
                     <h3>◆ ポートフォリオサイト</h3><BR>
@@ -209,8 +209,8 @@
             <li class="sActual1">
                 <div class="sActualCat" id="sActualCat">
                     <a href="https://lin.ee/JZQdWSi"></a>
-                    <img class="sActual_img" src="../img/line.PNG">
-                    <img class="sActual_img_sp" src="../img/sp_line.PNG">
+                    <img class="sActual_img" src="../img/line.png">
+                    <img class="sActual_img_sp" src="../img/sp_line.png">
                 </div>
                 <div  class="ActualMsgBox">
                     <h3>◆ 公式LINE　デモアカウント</h3><BR>
@@ -223,8 +223,8 @@
             <li class="sActual1">
                 <div class="sActualCat" id="sActualCat">
                     <a href="portfolio.php"></a>
-                    <img class="sActual_img" src="../img/pc_co.PNG">
-                    <img class="sActual_img_sp" src="../img/sp_co.PNG">
+                    <img class="sActual_img" src="../img/pc_co.png">
+                    <img class="sActual_img_sp" src="../img/sp_co.png">
                 </div>
                 <div>
                     <h3>◆ 業務系Webシステム</h3>
