--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -50,7 +50,7 @@
         <nav>
             
             <li><img class="video_title" id="video_title" src="../img/ucyuu1.png"></li><!-- タイトル背景宇宙 -->
-            <li><img class="img_title" src="../img/TOGES_PORTFOLIO.PNG"></li><!-- タイトルロゴ -->
+            <li><img class="img_title" src="../img/TOGES_PORTFOLIO.png"></li><!-- タイトルロゴ -->
             <div class="img_cat" id="simgCat" name="simgCat"> </div><!-- タイトルネコ -->
             <li><img class="nami" id="nami" src="../img/nami.PNG"></li><!-- 波 -->
         </nav>
