--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -17,7 +17,7 @@
             <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sSkil0').getBoundingClientRect().top);">SKILL</a></h1>
             <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sActual').getBoundingClientRect().top);">WORKS</a></h1>
             <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('slast').getBoundingClientRect().top);">LAST</a></h1>
-            <h1 class="li_link top_link"><a href="portfolio.php">⇒TOPにもどる</a></h1>
+            <h1 class="li_link top_link"><a href="https://toge99999.github.io/togep/src/portfolio.html">⇒TOPにもどる</a></h1>
             <!--<h1 class="li_link"><a href="#slast">saigoni</a></h1>-->
         </nav>
 
@@ -33,7 +33,7 @@
             <li class="nav_item2"><a href="#sSkil" onclick="MenuClose();">SKILL</a></li>
             <li class="nav_item3"><a href="#sActual" onclick="MenuClose();">WORKS</a></li>
             <li class="nav_item4"><a href="#slast" onclick="MenuClose();">LAST</a></li>
-            <li class="nav_item5"><a href="portfolio.php" onclick="MenuClose();">⇒TOPにもどる</a></li>
+            <li class="nav_item5"><a href="https://toge99999.github.io/togep/src/portfolio.html" onclick="MenuClose();">⇒TOPにもどる</a></li>
           </ul>
         </nav>
     </section>
@@ -193,7 +193,7 @@
         <li><h1>WORKS</h1></li>
             <li class="sActual1">
                 <div class="sActualCat" id="sActualCat">
-                    <a href="portfolio.php"></a>
+                    <a href="https://toge99999.github.io/togep/src/portfolio.html"></a>
                     <img class="sActual_img" src="../img/screen.png">
                     <img class="sActual_img_sp" src="../img/sp_po.png">
                 </div>
