--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width">
-	<META http-equiv="Refresh" content="3;URL=src/portfolio.html">
+	 <META http-equiv="Refresh" content="3;URL=./src/portfolio.html">
+	<!-- <META http-equiv="Refresh" content="3;URL=src/hello.html"> -->
+	<!--<META http-equiv="Refresh" content="3;URL=src/bz.html"> -->
 	<meta name="description" content="ディスクリプション">
 	<title>ページタイトル</title>
 </head>
@@ -13,7 +15,7 @@
 
 </body>
 </html>
-
+<!-- -->
 
 
 	
