--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -13,7 +13,7 @@
 
     <!-- 各項目へのリンク -->
             <nav class="item_link">
-                <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('prof_img0').getBoundingClientRect().top);">PROFILE</a></h1>
+                <h1 class="li_link li_linkPl"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('prof_img0').getBoundingClientRect().top);">PROFILE</a></h1>
                 <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sSkil0').getBoundingClientRect().top);">SKILL</a></h1>
                 <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sActual').getBoundingClientRect().top);">WORKS</a></h1>
                 <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('slast').getBoundingClientRect().top);">LAST</a></h1>
@@ -113,12 +113,12 @@
                 </li>
                 
                 <ul class="sSkilInline">
-                    <li class="sSkil1_0">
+                    <li class="sSkil1_0" id="sSkil1_0">
                     <h3 class="Skil1_item">◆ プログラミング</h3>
                         <p class="pSkilbox0" id="pSkilbox0">
                             【HTML/CSS/JavaScript】<br>　独学3か月<br>
                             【PHP(Laravel)】<br>　独学1か月<br>
-                            【開発ツール】<br>　VsCode/XAMPP/Git/Docker<br><br><br>
+                            【開発ツール】<br>　VsCode/XAMPP<br>　Git/Docker<br><br><br>
                         </p>
                         <p class="pSkilbox1" id="pSkilbox1">
                             HTML/CSS/JavaScriptの基礎を学び当ポートフォリオサイトを開発。<br>
@@ -127,7 +127,7 @@
                         </p>
                     </li>
 
-                    <li class="sSkil1_1">
+                    <li class="sSkil1_1" id="sSkil1_1">
                     <h3 class="Skil1_item">◆ 小売業　接客版売</h3>
                         <p class="pSkilbox0 pmaj" id="pSkilbox2">
                             【登録販売者】<br>　14年<br><br><br><br><br><br><br>
@@ -137,11 +137,11 @@
                         </p>
                     </li>
 
-                    <li class="sSkil1_2">
+                    <li class="sSkil1_2" id="sSkil1_2">
                     <h3 class="Skil1_item">◆ 公式LINE構築</h3>
                         <p class="pSkilbox0 pmaj" id="pSkilbox4">
                             【LINE構築】<br>　独学3か月<br>
-                            【使用ツール】<br>　Lステップ<br><br><br><br>
+                            【使用ツール】<br>　Lステップ<br><br><br><br><br>
                         </p>
                         <p class="pSkilbox1" id="pSkilbox5">
                             複雑な構築、入り組んだ条件分岐が得意です。<br>
