2023/01/26パソコンサイズ完成

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -8,17 +8,17 @@
 	</head><!-- 裏設定エリアの終了 -->
 
 	<body><!-- 画面に表示されるエリアの開始 -->
-    <script src="jquery-3.6.1.min.js"></script>
-    <script src="portfolio.js"></script>
+        <script src="jquery-3.6.1.min.js"></script>
+        <script src="portfolio.js"></script>
 
-    <!-- 各項目へのリンク -->
-            <nav class="item_link" id="item_link">
-                <h1 class="li_link li_linkPl"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('prof_img0').getBoundingClientRect().top);">PROFILE</a></h1>
-                <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sSkil0').getBoundingClientRect().top);">SKILL</a></h1>
-                <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sActual').getBoundingClientRect().top);">WORKS</a></h1>
-                <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('slast').getBoundingClientRect().top);">LAST</a></h1>
-                <h1 class="li_link top_link"><a href="https://toge99999.github.io/togep/src/portfolio.html">⇒TOPにもどる</a></h1>
-            </nav>
+        <!-- 各項目へのリンク -->
+        <nav class="item_link" id="item_link">
+            <h1 class="li_link li_linkPl"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sHoby').getBoundingClientRect().top - 200);">PROFILE</a></h1>
+            <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sSkil').getBoundingClientRect().top - 200);">SKILL</a></h1>
+            <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('sActual').getBoundingClientRect().top - 200);">WORKS</a></h1>
+            <h1 class="li_link"><a href="javascript:void(0)" onclick="autoScroll(document.getElementById('slast').getBoundingClientRect().top -200);">LAST</a></h1>
+            <h1 class="li_link top_link"><a href="https://toge99999.github.io/togep/src/portfolio.html">⇒TOPにもどる</a></h1>
+        </nav>
 
         <!-- スマートフォン用：ハンバーガーメニュー -->
         <section class="sp_link" id="sp_link">    
@@ -102,7 +102,7 @@
 
                     <div class="sSkil0CatB">
                         <img class="sSkil0Cir_img" id="sSkil0Cir_img" src="../img/js.PNG">
-                        <h3>JavaScript<BR>調べながらなんとか</h3>
+                        <h3>JavaScript<BR>時間を掛け<BR>調べながら</h3>
                     </div>
 
                     <div class="sSkil0CatB">
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="actualTbItem">
-                        <img class="sActual_img" src="../img/coming soon .png">
+                        <img class="sActual_img" src="../img/laravelD.png">
                         <!--  <a href="https://lin.ee/JZQdWSi"></a> -->
                         <h3 style="font-size: 25px;"> Laravelデモシステム</h3>
                         <p>
@@ -190,9 +190,9 @@
                     </div>
 
                     <div class="actualTbItem">
-                        <img class="sActual_img" src="../img/cat3d.png">
+                        <img class="sActual_img" src="../img/comingSoon.png">
                         <!--  <a href="https://lin.ee/JZQdWSi"></a> -->
-                        <h3 style="font-size: 25px;"> 🐈</h3>
+                        <h3 style="font-size: 25px;"> 🐈coming soon</h3>
                         <p>
                             <br>
                             <br>
@@ -206,19 +206,19 @@
         <section class="slast" id="slast" name="slast">
             <li><h1>LAST</h1></li>
                 <div class="slastCat">
-                    <img class="catmaru_img" src="../img/catmaru.PNG">
-                    <p class="slast0">◆好奇心が止まらず、疑問をとことん分析・追求する。<br>
+                    <!-- <img class="catmaru_img" src="../img/catmaru.PNG"> -->
+                    <p class="slast0"><BR><BR><BR><BR><BR><BR>◆好奇心が止まらず、疑問をとことん分析・追求する。<br>
                     ◆考えたり学び続ける事が好き。<br>
                     ◆もくもく一人作業をする時間が幸せで、永遠にやっていられる。<br>
                     こういった性質を満たす為、プログラミングをはじめました🐈🐈<br><br>
-                    </p>
-                    <p class="slast1">
+                    <!--</p>-->
+                    <!--<p class="slast1">-->
                     当ポートフォリオ制作の際も、夢中でコーディングに励みました。<br>
                     悩んだり、困ったりする事も多かったですが、それも含め楽しかったです。<br>
                     これからも様々な制作に挑戦していきたいです。</p>
                 </div>
         </section>
-    <biv class="hosi0" id="hosi0"></biv>
+        <biv class="hosi0" id="hosi0"></biv>
         <biv class="hosi1" id="hosi1"></biv>
-        </body><!-- 画面に表示されるエリアの終了 -->
+    </body><!-- 画面に表示されるエリアの終了 -->
 </html>
